--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,45 +5,29 @@
   {% include _base/head.html %}
 </head>
 
-<body class="" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-  <main class="" style="max-width:1400px;">
-      {% include _base/nav.html %}
+<body class="container-fluid " data-spy="scroll" data-target="#myScrollspy" data-offset="20">
+    <main class="" style="margin: 0 auto; max-width:38em;">       
       <!-- Notes Container -->
-      <section class="pl-4 pt-4 pr-4" id="post">
+      <section class="mt-3 pt-4 pr-4" id="post">
+          <div class="section-header pt-2" >
+              <h1 class="section-h2">
+                <p>{{ page.title }}</p>
+              </h1>
+              <div class="top-link">
+                <a href="{{site.url}}/#notes" style="color: var(--second-color);" class=""> Back </a>
+              </div>
+            </div>
         <!-- Notes Content -->
-        <div class="post">
-          <h3>{{ page.title }}</h3>
-          <p>{{ page.date | date_to_string }}</p>
+        <div class="post-header">                              
+          <p class="post-dates">{{ page.date }}</p>
+        </div>
+        <div class="post-content">
           <p>{{ page.introduction }}</p>
           <p>{{ content }}</p>
-          <!--   DISQUS SET UP   -->
-          {% if page.comments %}
-          <div id="disqus_thread"></div>
-          <script>
-            /**
-            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-            /*
-            var disqus_config = function () {
-            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-            */
-            (function () { // DON'T EDIT BELOW THIS LINE
-              var d = document, s = d.createElement('script');
-              s.src = '//jonwot-github-io.disqus.com/embed.js';
-              s.setAttribute('data-timestamp', +new Date());
-              (d.head || d.body).appendChild(s);
-            })();
-          </script>
-          <noscript>Please enable JavaScript to view the
-            <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-          </noscript>
-          {% endif %}
         </div>
+        {% include _base/footer.html %}
       </section>    
   </main>
-  {% include _base/footer.html %}
 </body>
 
 </html>
