--- a/_includes/_base/head.html
+++ b/_includes/_base/head.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="assets/css/syntax.css">  
 
   <!-- Scripts -->
+  <!-- ParticleJs -->
+  <script src="../../assets/js/particles.js" async></script>
+  <script src="../../assets/js/app.js"></script>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -16,9 +20,6 @@
   <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
-  <!-- ParticleJs -->
-  <script src="../../assets/js/particles.js"></script>
-  <script src="../../assets/js/app.js"></script>
   
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
