--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,28 +1,29 @@
 <!-- Top Nav Block -->
 <div class="home-banner">
-  <div class="mb-2" style="border-radius: 4px; background-color: var(--main-white); text-align: center;">
-  <a class="" href="{{site.url}}">
-    <span class="navbar-brand" style="color: var(--third-color)" href="{{site.url}}">
+  <div class=" mb-0"
+       style="
+	      border-radius: 4px; 	      
+	      text-align: center;" >
+    <span class="navbar-brand" style="padding: 0; color: var(--third-color); padding: 0em 1em 0em 1em; background-color: var(--main-white); " href="{{site.url}}">
       Jon Tow
     </span>
-  </a>  
-</div>
-  <nav class="navbar ml-0 navbar-expand  pt-2" id="nav">
 
-    <div class="collapse navbar-collapse"
-    style="word-spacing: 2px; " id="navbarNav">
-    <p>
-          <a class="" href="{{site.url}}#about">about</a> / 
-          <a class="" href="{{site.url}}#project">projects</a> / 
-          <a class="" href="{{site.url}}#notes">notes</a> / 
-          <a class="" href="https://github.com/jon-tow">
-            <i class="fab fa-github fa-lg"></i> 
-          </a> /
-          <a class="" href="https://twitter.com/jonbtow">
-            <i class="fab fa-twitter fa-lg"></i>
-          </a>
-    </p>
+  <nav class="navbar ml-0 navbar-expand mb-0 pb-0" style="background-color: var(--main-white); "id="nav">
+
+    <div class="collapse navbar-collapse pt-0" id="navbarNav">
+      <p style="font-weight: 600;">
+        <a class="" href="#about">about</a> / 
+        <a class="" href="#project">projects</a> / 
+        <a class="" href="#notes">notes</a> / 
+        <a class="" href="https://github.com/jon-tow">
+          <i class="fab fa-github fa-lg"></i> 
+        </a> /
+        <a class="" href="https://twitter.com/jonbtow">
+          <i class="fab fa-twitter fa-lg"></i>
+        </a>
+      </p>
     </div>
   </nav>
+  </div>
   <!-- End of Top Nav -->
 </div>
