--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,4 +1,4 @@
-  
+
 <section class="pt-1" id="notes">
 
   <!-- Section Title Row -->
@@ -14,9 +14,24 @@
   
   <!-- Content -->
   <div class="section-content" style="">
-      <!-- Notes Row -->
-        
-      Under construction. Coming soon.
+    <!-- Notes Row -->
+    <ul class="entry-previews" >
+      {% for post in site.posts %}
+      <li class="pt-3">
+	<p class="post-preview">
+	  <span style="font-size: .95em; color: var(--light-black)">{{post.date | date: '%B %d, %Y'}}
+	  </span>
+	  <br>
+	  <a href="{{ post.url }}" style="font-size: 1.15em;">
+	    {{ post.title }}
+	  </a>
+	  <br>
+	  {{ post.introduction }}	  
+	</p>
+      </li>
+      {% endfor %}
+    </ul>      
+
   </div>
 
 </section>
