--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,50 +2,64 @@
 <html>
 
   <head>
-    <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="../../data/favicon.ico" type="image/gif" sizes="16x16">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../../data/favicon.ico" type="image/gif" sizes="16x16">
 
-  <!-- Style -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="stylesheet" href="/assets/css/syntax.css">  
+    <!-- Style -->
+    <link rel="stylesheet"
+	  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	  crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/syntax.css">
 
-  <!-- Scripts -->
-<src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <!-- MathJax-->
-  <script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
+    <!-- Scripts -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+	    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+	    crossorigin="anonymous">
+    </script>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <!-- MathJax-->
+    <script type="text/javascript" async
+	    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
 
-  <title>Jonathan Tow</title>
-  </head>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto"
+	  rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+	  rel="stylesheet"
+	  integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+	  crossorigin="anonymous">
 
+    <title>Jon Tow</title>
   </head>
 
   <body class="container-fluid" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-    <main class="" style="margin: 0 auto; max-width:38em;">       
+    <main class="post">
+
       <!-- Notes Container -->
-      <section class="mt-3 pt-4" id="post" style="background-color: var(--bg)">
-        <div class="section-header pt-2" >
+      <section class="mt-3 pt-4 note-content">
+
+
+	<!-- Notes Header -->
+	<div class="section-header pt-2" >
 	  <h1 class="section-h2 mt-4 ">
             <p>{{ page.title }}</p>
           </h1>
-        </div>
-        <!-- Notes Content -->
-        <div class="post-header">                              
+	</div>
+
+	<!-- Notes Content -->
+	<div class="post-header">                              
           <p class="post-dates">{{ page.date | date: '%B %d, %Y' }}</p>
-        </div>
-        <div class="post-content">
+	</div>
+	<div class="post-content">
           <p>{{ page.introduction }}</p>
           <p>{{ content }}</p>
-        </div>
+	</div>
 
+	
       </section>    
     </main>
   </body>
