--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -4,11 +4,11 @@
        style="
 	      border-radius: 4px; 	      
 	      text-align: center;" >
-    <span class="navbar-brand" style="padding: 0; color: var(--third-color); padding: 0em 1em 0em 1em; background-color: var(--main-white); " href="{{site.url}}">
+    <span class="navbar-brand" style="padding: 0; color: var(--third-color); padding: 0em 1em 0em 1em; background-color: white; " href="{{site.url}}">
       Jon Tow
     </span>
 
-  <nav class="navbar ml-0 navbar-expand mb-0 pb-0" style="background-color: var(--main-white); "id="nav">
+  <nav class="navbar ml-0 navbar-expand mb-0 pb-0" style="background-color: white; "id="nav">
 
     <div class="collapse navbar-collapse pt-0" id="navbarNav">
       <p style="font-weight: 600;">
