--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -16,20 +16,21 @@
   <div class="section-content" style="">
     <!-- Notes Row -->
     <ul class="entry-previews" >
-      {% for post in site.posts %}
-      <li class="pt-3">
-	<p class="post-preview">
-	  <span style="font-size: .95em; color: var(--light-black)">{{post.date | date: '%B %d, %Y'}}
-	  </span>
-	  <br>
-	  <a href="{{ post.url }}" style="font-size: 1.15em;">
-	    {{ post.title }}
-	  </a>
-	  <br>
-	  {{ post.introduction }}	  
-	</p>
-      </li>
-      {% endfor %}
+      Under construction. Coming soon.
+      <!-- {% for post in site.posts %} -->
+      <!-- <li class="pt-3"> -->
+      <!-- 	<p class="post-preview"> -->
+      <!-- 	  <span style="font-size: .95em; color: var(--light-black)">{{post.date | date: '%B %d, %Y'}} -->
+      <!-- 	  </span> -->
+      <!-- 	  <br> -->
+      <!-- 	  <a href="{{ post.url }}" style="font-size: 1.15em;"> -->
+      <!-- 	    {{ post.title }} -->
+      <!-- 	  </a> -->
+      <!-- 	  <br> -->
+      <!-- 	  {{ post.introduction }}	   -->
+      <!-- 	</p> -->
+      <!-- </li> -->
+      <!-- {% endfor %} -->
     </ul>      
 
   </div>
