--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@
     <main class="post">
 
       <!-- Notes Container -->
-      <section class="mt-3 pt-4 note-content">
+      <section class="mt-3 pt-4 note-content" style="background-color: var(--main-white);">
 
 
 	<!-- Notes Header -->
