--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,8 +44,8 @@
 
 
 	<!-- Notes Header -->
-	<div class="section-header pt-2" >
-	  <h1 class="section-h2 mt-4 ">
+	<div class="post-header pt-2" >
+	  <h1 class="post-h2 mt-4 ">
             <p>{{ page.title }}</p>
           </h1>
 	</div>
