--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -7,23 +7,19 @@
     </h1>
   </div>
 
-
   <!-- Content -->
-  <div class="section-content ">
+  <div class="section-content">
     <!-- Bio Row -->
-    <p>
+    <p style="text-align: justify;">
       <b>CS @ Stony Brook University</b>
       <br>
       <br>
       I enjoy coding, tinkering with
       machine learning models,
       and pretending to be a musician.
-    </p>
-
-    <p>
+      <br>
       I'm always looking for new things to learn. 
     </p>
-    <p></p>
     <!-- End of Bio Row -->
 
     <!-- Resume -->
