--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -1,5 +1,5 @@
 
-<section class="pt-1" id="notes">
+<section id="notes">
 
   <!-- Section Title Row -->
   <div class="section-header" >
@@ -7,7 +7,7 @@
       <p>Notes</p>
     </h1>
     <div class="top-link">
-      <a href="#about" style="color: var(--second-color);" class=""> Back to top </a>
+      <a href="#nav" style="color: var(--second-color);" class=""> Back to top </a>
     </div>
   </div>
 
