--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -1,11 +1,10 @@
 <!-- Footer -->
 <footer>
-  <div class="footer-date">
+  <div class="footer-symbol">
     τ
   </div>
-  <div class="arrow-right-date">
-  </div>
-  <div class="pt-1">
+
+  <div class="pt-1 pl-2">
     <p>©2019 - Built by Jon Tow with Jekyll and <span class="love">❤</span>
   </div>
 </footer>
