--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,29 +1,23 @@
-<!-- Top Nav Block -->
-<div class="home-banner">
-  <div class=" mb-0"
-       style="
-	      border-radius: 4px; 	      
-	      text-align: center;" >
-    <span class="navbar-brand" style="padding: 0; padding: 0em 1em 0em 1em; background-color: var(--bg-2); " href="{{site.url}}">
+<nav id="nav">
+  <div class="mb-0">
+    <span class="navbar-brand" href="{{site.url}}">
       Jon Tow
     </span>
 
-  <nav class="navbar ml-0 navbar-expand mb-0 pb-0" style="background-color: var(--bg-2); "id="nav">
-
-    <div class="collapse navbar-collapse pt-0" id="navbarNav">
-      <p style="font-weight: 600;">
-        <a class="" href="#about">about</a> / 
-        <a class="" href="#project">projects</a> / 
-        <a class="" href="#notes">notes</a> / 
-        <a class="" href="https://github.com/jon-tow">
-          <i class="fab fa-github fa-lg"></i> 
-        </a> /
-        <a class="" href="https://twitter.com/jonbtow">
-          <i class="fab fa-twitter fa-lg"></i>
-        </a>
-      </p>
+    <div class="navbar ml-0 navbar-expand mb-0 pb-0">
+      <div class="collapse navbar-collapse pt-0" id="navbarNav">
+	<p>
+          <a class="" href="#about">about</a> / 
+          <a class="" href="#project">projects</a> / 
+          <a class="" href="#notes">notes</a> / 
+          <a class="" href="https://github.com/jon-tow">
+            <i class="fab fa-github fa-lg"></i> 
+          </a> /
+          <a class="" href="https://twitter.com/jonbtow">
+            <i class="fab fa-twitter fa-lg"></i>
+          </a>
+	</p>
+      </div>
     </div>
-  </nav>
   </div>
-  <!-- End of Top Nav -->
-</div>
+</nav>
