--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,15 +37,14 @@
   </head>
 
   <body class="container-fluid" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-    <main class="post">
+    <main class="post" style="background-color: var(--main-white);">
 
       <!-- Notes Container -->
-      <section class="mt-3 pt-4 note-content" style="background-color: var(--main-white);">
-
+      <section class="mt-3 pt-4 note-content">
 
 	<!-- Notes Header -->
-	<div class="post-header pt-2" >
-	  <h1 class="post-h2 mt-4 ">
+	<div class="post-header pt-2">
+	  <h1 class="post-h2 mt-4">
             <p>{{ page.title }}</p>
           </h1>
 	</div>
