--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@
     <main class="post" style="background-color: var(--main-white);">
 
       <!-- Notes Container -->
-      <section class="mt-3 pt-4 note-content">
+      <div class="note-content">
 
 	<!-- Notes Header -->
 	<div class="post-header pt-2">
@@ -59,7 +59,7 @@
 	</div>
 
 	
-      </section>    
+      </div>    
     </main>
   </body>
 
