--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,11 +6,11 @@
   </head>
 
   <body class="" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-    <!-- Navbar -->
     {% include _base/nav.html %}
-    <main class="">
-      <!-- Content -->
-      {{ content }}
+    <main class="contaier">
+      <div class="row">
+	{{ content }}
+	</div>
     </main>
     {% include _base/footer.html %}
   </body>
