--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -1,7 +1,7 @@
 <section id="about">
 
   <!-- Section Title Row -->
-  <div class="section-header pb-2">
+  <div class="section-header">
     <h1 class="section-h2">
       <p>About</p>
     </h1>
