--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -1,7 +1,7 @@
-<section class="pt-1 pb-4" id="project">
+<section id="project">
 
     <!-- Section Title Row -->
-    <div class="section-header pb-2">
+    <div class="section-header">
       <h1 class="section-h2">
         <p>Projects</p>
       </h1>
