--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -5,6 +5,6 @@
   </div>
 
   <div class="pt-1 pl-2">
-    <p>©2019 - Built by Jon Tow with Jekyll and <span class="love">❤</span>
+    <p>©2019 - Built by Jon Tow with Jekyll
   </div>
 </footer>
