update post design

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,22 +36,20 @@
     <title>Jon Tow</title>
   </head>
 
-  <body class="container-fluid" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
+  <body>
     <main class="post">
-      <div class="note-content">
-	<div class="post-header pt-2">
+	<div class="post-title pt-2">
 	  <h1 class="post-h2 mt-4">
             <p>{{ page.title }}</p>
           </h1>
 	</div>
 	<div class="post-header">                              
-          <p class="post-dates">{{ page.date | date: '%B %d, %Y' }}</p>
+          <p class="post-date">{{ page.date | date: '%B %d, %Y' }}</p>
 	</div>
 	<div class="post-content">
           <p>{{ page.introduction }}</p>
           <p>{{ content }}</p>
 	</div>
-      </div>    
     </main>
   </body>
 
